--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   /* border: 1px solid; */
-  margin-top: 10%;
+  /* margin-top: 10%; */
 }
 
 .login-container .Login {
@@ -12,6 +12,8 @@
   border-radius: 4px;
   box-shadow: 1px 1px 4px lightgray;
   flex-basis: 70%;
+  margin-top: 5%;
+  margin-bottom: 2%;
 }
 
 .login-container #username,
@@ -33,25 +35,11 @@
   font-size: 1.1rem;
   padding: 10px 25px;
   border-radius: 5px;
-  margin: 10px;
+  margin-top: 10px;
 }
 
 .login-container .form-group {
   margin-bottom: 10px;
-}
-
-.login-container .signup-btn {
-  background-color: green;
-  border: none;
-  font-size: 1.1rem;
-  padding: 10px 25px;
-  border-radius: 5px;
-  margin: 10px;
-}
-
-.login-container .signup-btn a {
-  text-decoration: none;
-  color: white;
 }
 
 @media screen and (max-device-width: 1000px) {
@@ -61,7 +49,7 @@
 
   .login-container {
     background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
-    border: 1px solid red;
+    /* border: 1px solid red; */
     height: 100vh;
     margin-top: 0;
   }
@@ -74,7 +62,7 @@
 
   .login-container {
     background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
-    border: 1px solid red;
+    /* border: 1px solid red; */
     height: 100vh;
     margin-top: 0;
   }
