--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -35,35 +35,53 @@
   font-size: 1.1rem;
   padding: 10px 25px;
   border-radius: 5px;
-  margin-top: 10px;
+  margin: 10px;
 }
 
 .login-container .form-group {
   margin-bottom: 10px;
 }
 
+.login-container .signup-btn {
+  background-color: green;
+  border: none;
+  font-size: 1.1rem;
+  padding: 10px 25px;
+  border-radius: 5px;
+  margin: 10px;
+}
+
+.login-container .signup-btn a {
+  text-decoration: none;
+  color: white;
+}
+
 @media screen and (max-device-width: 1000px) {
   .login-container .Login {
     flex-basis: 100%;
+    box-shadow: none;
+    margin-top: 0;
+    margin-bottom: 0;
   }
 
   .login-container {
     background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
     /* border: 1px solid red; */
-    height: 100vh;
-    margin-top: 0;
+    min-height: 93vh;
   }
 }
 
 @media screen and (max-width: 700px) {
   .login-container .Login {
     flex-basis: 100%;
+    box-shadow: none;
+    margin-top: 0;
+    margin-bottom: 0;
   }
 
   .login-container {
     background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
     /* border: 1px solid red; */
-    height: 100vh;
-    margin-top: 0;
+    min-height: 93vh;
   }
 }
